# newleaf_demos

./: .clang-format  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
assets/common/prefabs/: systems.json
assets/common/shaders/: fbo.frag  fbo.vert  skybox.frag  skybox.vert
assets/flappy_bird/prefabs/: creatures.json  meta.json  scene.json
assets/flappy_bird/scenes/: flappy_bird_scene.json  root.json  root_scene.json
assets/flappy_bird/shaders/: camera.frag  shape.frag  sprite.frag  sprite.vert  texture.frag
assets/sponza/prefabs/: creatures.json  structures.json
assets/sponza/scenes/: root.json
assets/sponza/shaders/: model.frag  model.vert
cmake/: copy_assets.cmake  copy_assets_command.cmake  warnings.cmake
packaging/: app.aseprite
src/flappy_bird/: app.cpp
src/flappy_bird/components/: register.cpp  register.h
src/flappy_bird/components/config/: cCoins.h  cPipes.h
src/flappy_bird/components/meta/: cScore.h  cTimer.h
src/flappy_bird/dispatchers/game/: app_dispatcher.h  on_coin_collected.h  on_death.h  on_level_completed.h  on_timer_ticked.h
src/flappy_bird/dispatchers/menu/: menu_input_dispatcher.h
src/flappy_bird/dispatchers/meta/: input_dispatcher.h  window_dispatcher.h
src/flappy_bird/handlers/game/: app_handler.h  on_coin_collected.h  on_death.h  on_level_completed.h  on_ready.h  on_timer_ticked.h
src/flappy_bird/handlers/menu/: menu_input_handler.h
src/flappy_bird/handlers/meta/: input_handler.h  window_handler.h
src/flappy_bird/layers/game/: completed_overlay.cpp  completed_overlay.h  game_layer.cpp  game_layer.h  gameover_overlay.cpp  gameover_overlay.h  pause_overlay.cpp  pause_overlay.h  ready_overlay.cpp  ready_overlay.h
src/flappy_bird/layers/menu/: menu_background_layer.cpp  menu_background_layer.h  menu_buttons_layer.cpp  menu_buttons_layer.h
src/flappy_bird/states/: game_state.cpp  game_state.h  menu_state.cpp  menu_state.h
src/flappy_bird/systems/animation/: sAnimation.cpp  sAnimation.h
src/sponza/: app.cpp
src/sponza/handlers/: input_handler.h  window_handler.h
src/sponza/states/: game_state.cpp  game_state.h
(+24 files in other folders)
